crates/fe/tests/fixtures/cli_output/ingots/unclosed_string/unclosed_string_tree.snap
---
source: crates/fe/tests/cli_output.rs
expression: output
---
=== STDOUT ===
➖ [invalid fe.toml]

=== STDERR ===
❌ Invalid fe.toml file at file://<project>/crates/fe/tests/fixtures/cli_output/ingots/unclosed_string/: TOML parse error at line 2, column 17
  |
2 | name = "unclosed
  |                 ^
invalid basic string


=== EXIT CODE: 0 ===
